--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+   body {
+     font-family: "Poppins", sans-serif;
+     padding-top: 90px;
+   }
+    /* custom scrollbar*/
+ ::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background-color: #fff;
+  box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(255, 0, 132);
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+  
+   .line {
+     width: 100%;
+     height: 1px;
+     margin: 30px 0;
+     border-bottom: 1px dashed #ddd;
+   }
+   .nav-bg-color{
+     background-color: rgba(255, 255, 255, 0.885);
+   }
+
+   .navbar {
+     padding-top: 25px;
+     padding-bottom: 25px;
+     transition: all 0.5s;
+   }
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
