--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
    body {
      font-family: "Poppins", sans-serif;
-     padding-top: 90px;
+     margin-top: 90px;
    }
     /* custom scrollbar*/
  ::-webkit-scrollbar {
